--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -199,6 +199,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 .nobr
 	white-space: nowrap
 
+.hide-text
+	+hide-text
 
 /* content img
 .imgc
