--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -92,13 +92,13 @@ $user-content: user-content !default
 
 // =======Layout========
 // отступы слева и справа для всего сайта
-$page-layout-space-horizontal: 20px !default
+$page-layout-space: 20px !default
 // максимальная ширина сайта
 $page-layout-width: 1920px !default
 // минимальные отступы слева и справа у текствого блока
-$text-layout-space-horizontal: 60px !default
-$text-layout-space-horizontal--md: 30px !default
-$text-layout-space-horizontal--sm: 15px !default
+$text-layout-space: 60px !default
+$text-layout-space--md: 30px !default
+$text-layout-space--sm: 15px !default
 // максимальная ширина текстового блока
 $text-layout-width: 800px !default
 // максимальная ширина текстового блока выходящего за пределы текста
