--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -29,18 +29,6 @@
 				property: fill
 				duration: $animation-speed
 
-	.st-bg
-		fill: #e2e5e7
-
-	.st-corner
-		fill: #b0b7bd
-
-	.st-shadow
-		fill: #cad1d8
-
-	.st-text
-		fill: white
-
 	& > span, & > em
 		display: block
 		margin-left: #{$file-icon-size}
@@ -61,5 +49,17 @@
 
 		& > em
 			color: $bg-color-base
+
+.st-bg
+	fill: #e2e5e7
+
+.st-corner
+	fill: #b0b7bd
+
+.st-shadow
+	fill: #cad1d8
+
+.st-text
+	fill: #fff
 
 /* files links end
