--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -107,6 +107,8 @@ $flood-layout-width: 1000px !default
 $grid-space: 30px !default
 $grid-space--lg: 20px !default
 $grid-space--sm: 10px !default
+// отступы в дефолтных списках
+$list-space: 30px
 
 // sidebar
 $sidebar-width: 260px !default
