--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -1,10 +1,11 @@
 /* reset */
-a, input, button,
-a:focus, input:focus, button:focus
+//a, input, button,
+//a:focus, input:focus, button:focus
+input, input:focus, textarea, select
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important
 	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important
 	outline: none !important
-*:focus
+//*:focus
 	outline: none
 	-moz-outline: 3px solid white !important
 body
