--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -81,7 +81,7 @@ a
 	color: $link-color
 	text-decoration: underline
 	cursor: default
-	outline: none
+	//outline: none
 
 	&:link
 		cursor: pointer
@@ -276,18 +276,19 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		list-style: none
 
 		li
-			padding-left: 30px
+			padding-left: $list-space
 			margin: 0 0 round($bottom-space*0.5)
 			position: relative
 
 	ul > li::before
-		+pseudo()
-		left: 0
-		top: 9px
+		content: ''
+		display: block
+		float: left
 		+size(0)
+		margin: 0.4em 0 -0.5em -#{$list-space}
 		border: solid transparent
-		border-width: 5px 0 5px 9px
-		border-left-color: $base-color
+			width: 5px 0 5px 9px
+			left-color: $base-color
 
 	ol
 		counter-reset: section
@@ -305,8 +306,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 				color: $base-color
 				content: counter(section)
 				padding: 0 4px 0 0
-				min-width: 30px
-				margin-left: -30px
+				min-width: $list-space
+				margin-left: -#{$list-space}
 
 	ul, ol
 		ul, ol
