--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -2,7 +2,6 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* BUTTON
 [class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
 	display: inline-block
 	vertical-align: top
@@ -95,7 +94,7 @@
 		+display-inline-block-middle
 
 	path
-		fill: inherit
+		fill: currentColor
 
 	span
 		text-align: left
@@ -245,4 +244,3 @@
 		background-color: $mark-color
 
 /* button popup close end
-/* BUTTON end
