--- a/src/sass/print/_print.sass
+++ b/src/sass/print/_print.sass
@@ -53,6 +53,7 @@
 		font-family: Arial, Helvetica, sans-serif !important
 		font-size: 10pt !important
 		line-height: 1.5 !important
+		min-width: 1024px !important
 
 	h1, h2, h3, h4, h5, h6,
 	b, strong, th, i, em,
