--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -212,7 +212,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		text-align: center
 		display: block
 		margin: 0 auto $bottom-space
-		max-width: $flood-layout-width
+		width: $flood-layout-width
+		max-width: 100%
 		clear: both
 
 	.imgl
