--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2555,6 +2555,12 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 
 /* user form end */
 /* slick sliders */
+.slick-slide {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+	outline: none !important;
+}
+
 .slick-arrow {
 	width: 40px;
 	height: 40px;
@@ -2719,7 +2725,7 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 	white-space: normal;
 	overflow: hidden;
 	position: relative;
-	background: #494949;
+	background-color: transparent;
 }
 
 .slick-initialized .images-slider__item {
@@ -2732,6 +2738,7 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 	display: block;
 	width: 100%;
 	opacity: 1;
+	margin-bottom: 2.4rem;
 }
 
 .images-slider__item::before {
@@ -2739,6 +2746,10 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 	display: block;
 	height: 0;
 	padding-top: 56.25%;
+}
+
+.no-js .images-slider__item::before {
+	content: none;
 }
 
 .images-slider__item img {
@@ -2754,8 +2765,28 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 	font-family: "object-fit: contain";
 }
 
+.no-js .images-slider__item img[data-lazy] {
+	display: none;
+}
+
+.no-js .images-slider__item img {
+	position: relative;
+	top: auto;
+	left: auto;
+	width: auto;
+	height: auto;
+	-o-object-fit: fill;
+	   object-fit: fill;
+	font-family: "object-fit: fill";
+	margin-bottom: 1rem;
+}
+
 .images-slider__item .caption {
 	display: none;
+}
+
+.no-js .images-slider__item .caption {
+	display: block;
 }
 
 .images-slider .slick-arrow {
@@ -2822,6 +2853,22 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 }
 
 /* images slider end */
+/* flashes */
+.flashes {
+	padding: 0 90px;
+}
+
+.flashes__item, .images-slider__item .caption {
+	font-size: 1.4rem;
+	line-height: 1.5;
+	color: gray;
+}
+
+.flashes__item > *:last-child, .images-slider__item .caption > *:last-child {
+	margin-bottom: 0;
+}
+
+/* flashes end */
 /* jFiler */
 .upload-file {
 	opacity: 0;
@@ -3000,22 +3047,6 @@ label.input--focus, input[type="text"].input--focus, input[type="password"].inpu
 }
 
 /* jFiler end */
-/* flashes */
-.flashes {
-	padding: 0 90px;
-}
-
-.flashes__item {
-	font-size: 1.4rem;
-	line-height: 1.5;
-	color: gray;
-}
-
-.flashes__item > *:last-child {
-	margin-bottom: 0;
-}
-
-/* flashes end */
 /* breadcrumbs */
 .breadcrumbs {
 	color: gray;
@@ -3838,6 +3869,12 @@ li:hover > .nav__drop {
 	.breadcrumbs, .breadcrumbs__list,
 	[class*="btn-"],
 	form,
+	.flashes,
+	.images-slider__item::before,
+	.images-slider__list .slick-arrow,
+	.images-slider__list .slick-dots,
+	.images-slider__list .slider-counter,
+	.images-slider__item img,
 	.class {
 		display: none !important;
 	}
@@ -3847,6 +3884,11 @@ li:hover > .nav__drop {
 	.imgl, .imgr, .imgc,
 	table, blockquote, q, cite,
 	[class*="feature-list"],
+	.images-slider__list,
+	.images-slider__list .slick-list,
+	.images-slider__list .slick-track,
+	.images-slider__item,
+	.images-slider__item .caption,
 	.class {
 		display: block !important;
 		float: none !important;
@@ -3881,6 +3923,7 @@ li:hover > .nav__drop {
 	.feature-list__item,
 	.feature-list__img,
 	.datetime,
+	.images-slider__item,
 	.class {
 		margin-top: 0 !important;
 		margin-bottom: 0.5cm !important;
@@ -3911,6 +3954,9 @@ li:hover > .nav__drop {
 	}
 	table {
 		width: 100% !important;
+	}
+	.user-content img {
+		max-width: 8cm !important;
 	}
 }
 
