--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -23,6 +23,7 @@ input
 textarea, .select select, input[type="text"], input[type="email"], input[type="search"], input[type="submit"], input[type="button"], input[type="reset"], button
 	-webkit-appearance: none
 	-moz-appearance: none
+	appearance: none
 	border-radius: 0
 select::-ms-expand
 	display: none
@@ -30,6 +31,8 @@ input[type=radio], input[type=checkbox], select
 	cursor: pointer
 textarea, input, button
 	-webkit-appearance: none
+	-moz-appearance: none
+	appearance: none
 	border-radius: 0
 input[type="radio"]:focus
 	-moz-outline-radius: 12px !important
